@@ -1,7 +1,13 @@
-from Globals import InitializeClass
 from AccessControl import ClassSecurityInfo
 from Products.Archetypes.atapi import BaseBTreeFolder
+
+try:
+    from App.class_init import InitializeClass
+except ImportError:
+    from Globals import InitializeClass
+
 from Products.LinguaPlone.I18NBaseObject import I18NBaseObject
+
 
 class I18NBaseBTreeFolder(I18NBaseObject, BaseBTreeFolder):
     """Base class for translatable objects."""
